Finished Cubic Disarray

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -22,5 +22,6 @@ add_executable(
         HypnoticSquares/draw.cpp
         UnDeuxTrois/draw.cpp
         TriangularMesh/draw.cpp
+        CubicDisarray/draw.cpp
 )
 target_link_libraries(CppGenerativeArtistry sfml-audio sfml-network sfml-graphics sfml-window sfml-system)
